<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CardGuard</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_cardguard">Welcome to CardGuard!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username2">Username</string>
    <string name="password2">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="user">User</string>
    <string name="notifications">Notifications</string>
    <string name="new_transaction">New Transaction</string>
    <string name="recent_transaction_history">Recent Transaction History</string>
    <string name="_1_31_18">1/31/18</string>
    <string name="_2_2_18">2/2/18</string>
    <string name="_2_5_18">2/5/18</string>
    <string name="ndshowal">ndshowal</string>
    <string name="_100">$100</string>
    <string name="zzhao">zzhao</string>
    <string name="_50">$50</string>
    <string name="ampolito">ampolito</string>
    <string name="_25">$25</string>
    <string name="_2_11_18">2/11/18</string>
    <string name="kypawloski">kypawloski</string>
    <string name="_75">$75</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="receiver2">Receiver</string>
    <string name="sender2">Sender</string>
    <string name="send">Send</string>
    <string name="username_of_receiver">Username of Receiver</string>
    <string name="amount_of_transaction">Amount of Transaction</string>
    <string name="username3">Username</string>
    <string name="amount_of_transaction_in_us_dollars">Amount of Transaction (in US dollars)</string>
    <string name="amount">Amount</string>
    <string name="amount2">Amount</string>
    <string name="username_of_sender">Request from User</string>
    <string name="amount_of_transaction2">Amount of Transaction</string>
    <string name="username4">Username</string>
    <string name="amount3">Amount</string>
    <string name="request">Request</string>
    <string name="send2">Send</string>
    <string name="fingerprint_registration">Fingerprint Registration</string>
    <string name="please_scan_your_fingerprint_now">Please Scan Your Fingerprint Now</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="phone_number">Phone number</string>
    <string name="submit">Submit</string>
    <string name="we_will_send_you_a_text_message_with_a_code_please_enter_it_on_the_next_screen_to_validate_your_phone_number">We will send you a text message with a code. Please enter it on the next screen to validate your phone number.</string>
    <string name="validate_your_phone_number">Validate Your Phone Number</string>
    <string name="enter_the_code_that_we_sent_you_below">Enter the code that we sent you below.</string>
    <string name="submit2">Submit</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="sender3">Sender</string>
    <string name="amount4">Amount</string>
    <string name="memo">Memo</string>
    <string name="receiver3">Receiver</string>
    <string name="birthday">Birthday</string>
    <string name="lunch">Lunch</string>
    <string name="_10">$10</string>
    <string name="pizza_party">Pizza party</string>
    <string name="_2_18_18">2/18/18</string>
    <string name="jivezaj">jivezaj</string>
    <string name="_8">$8</string>
    <string name="movie_night">Movie night</string>
    <string name="username5">Username</string>
    <string name="amount5">Amount</string>
    <string name="memo1">Memo</string>
    <string name="memo2">Memo</string>
    <string name="memo3">Memo</string>
    <string name="memo4">Memo</string>
    <string name="username6">Username</string>
    <string name="amount6">Amount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username7">Username</string>
    <string name="email">Email</string>
    <string name="password3">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username8">Username</string>
    <string name="password4">Password</string>
    <string name="downarrow">↓</string>
    <string name="register2">Register</string>
    <string name="your_request_has_been_sent">Your Request Has Been Sent!</string>
    <string name="your_transaction_has_been_sent">Your Transaction Has Been Sent!</string>
    <string name="return_to_your_account">Return To Your Account</string>
    <string name="btn_register">Register</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_account_information">Update Account Information</string>
    <string name="update_billing_information">Update Billing Information</string>
    <string name="update_identification_settings">Update Identification Settings</string>
    <string name="log_out">Log Out</string>
    <string name="website">Website</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="username9">Username</string>
    <string name="password5">Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="register3">Register</string>
    <string name="email2">Email</string>
    <string name="identification_type">Identification Type</string>
    <string name="settings2">Settings</string>
    <string name="account_details">Edit Account Details</string>
    <string name="save_changes">Save Changes</string>
    <string name="billing_information">Billing Information</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="expiration_date2">Expiration Date</string>
    <string name="name_of_cardholder">Name of Cardholder</string>
    <string name="name_of_cardholder2">Name of Cardholder</string>
    <string name="cvv">CVV</string>
    <string name="cvv2">CVV</string>
    <string name="identification_settings">Identification Settings</string>
    <string name="scan_card">Scan Card</string>
    <string name="transaction_history">Transaction History</string>
    <string name="text_fingerprint_authentication">Fingerprint Authentication</string>
    <string name="text_fingerprint_instructions">Please place your finger on the fingerprint sensor</string>
    <string name="full_history">Full History</string>
    <string name="search">Search</string>
    <string name="search_for_user">Search for User</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_website">Go to website</string>
    <string name="back_to_account">Back to Account</string>
    <string name="respond">Respond</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="time">Time</string>
    <string name="memo5">Memo</string>
    <string name="_3_15_2018">3/15/2018</string>
    <string name="_9_35_am">9:35 AM</string>
    <string name="lunch2">Lunch</string>
    <string name="back_to_notifications">Back to Notifications</string>
    <string name="back_to_account2">Back to Account</string>
    <string name="go_to_website2">Go to website</string>
    <string name="initiated">Initiated On:</string>
    <string name="accepted">Accepted On:</string>
    <string name="back_to_account3">Back to Account</string>
    <string name="back_to_history">Back to History</string>
    <string name="recent_transactions">Recent Transactions:</string>
    <string name="request_funds">Request Funds</string>
    <string name="confirm">Confirm</string>
    <string name="deny">Deny</string>
    <string name="update_password">Update Password:</string>

    <string name="action_settings">Settings</string>
    <string name="use_password">Use password</string>
    <string name="ok">OK</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="transaction_map">Transaction Map</string>
    <string name="waiting_for_transaction">Waiting for transaction to be confirmed</string>
    <string name="title_location_permission">Allow CardGuard to access your location?</string>
    <string name="text_location_permission">Tracking your location will allow you to track where your transactions take place, to help prevent fraud.</string>
    <string name="title_activity_maps">Map</string>
    <string name="unconfirmed_transactions">Unconfirmed Transactions</string>
    <string name="your_contacts">Your Contacts:</string>
    <string name="sign_out">Sign Out</string>
</resources>
