<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.newtest.test.test.BillingInformation">

    <TextView
        android:id="@+id/billing_information_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billing_information"
        android:textSize="32sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
 />



    <EditText
        android:id="@+id/card_number_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/card_number"
        android:inputType="number"
  />

    <EditText
        android:id="@+id/expiration_date_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/expiration_date"
        android:inputType="date"
    />

<EditText
        android:id="@+id/cardholder_name_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_of_cardholder"
        android:inputType="textPersonName"
      />

    <Button
        android:id="@+id/save_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:layout_gravity="center"
   />

    <Button
        android:id="@+id/scan_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scan_card"
        android:textSize="24sp" />


       <FrameLayout
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:layout_weight="1"
           android:layout_gravity="center">

           <Button
               android:id="@+id/cancel_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|center_horizontal"
               android:text="@string/cancel" />
       </FrameLayout>



</android.widget.LinearLayout>
