<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.newtest.test.test.RequestTransaction">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/request_funds"
        android:textSize="32sp"
        android:layout_gravity="center"
        />


    <TextView
        android:id="@+id/username_of_sender_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_of_sender"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
      />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:labelFor="@+id/username_of_sender_label"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
     />

    <TextView
        android:id="@+id/amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_of_transaction"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
   />

    <EditText
        android:id="@+id/amount_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:labelFor="@+id/amount_label"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
       />



    <TextView
        android:id="@+id/memo_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memo"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
      />

    <EditText
        android:id="@+id/memo_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/memo"
        android:inputType="textPersonName"
        android:labelFor="@+id/memo_label"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
      />


    <Button
        android:id="@+id/request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"
        android:layout_gravity="center"
     />

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/cancel" />
    </FrameLayout>
</LinearLayout>
