<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context="com.newtest.test.test.NewTransaction">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_transaction"
        android:textSize="30dp"
        android:padding="40dp"
        app:layout_constraintTop_toBottomOf="parent"

        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header">

        <Button
            android:id="@+id/send_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:text="@string/send"
            android:textSize="20sp" />

        <Button
            android:id="@+id/request_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:text="@string/request"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_contacts"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="60dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contacts_label"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />

</android.support.constraint.ConstraintLayout>
